Fiixing issues with unit tests and testing api routes