@@ -404,7 +404,12 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>
+            @{argLine}
             -javaagent:${settings.localRepository}/org/mockito/mockito-core/5.20.0/mockito-core-5.20.0.jar
+            --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
           </argLine>
         </configuration>
       </plugin>
